--- a/app/src/main/res/layout/activity_student.xml
+++ b/app/src/main/res/layout/activity_student.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="android.kalys.androidisaev.MainActivity">
+    tools:context="android.kalys.androidisaev.StudentActivity">
 
     <LinearLayout
         android:layout_width="match_parent"
